<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000F3532"
        android:src="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0BB896"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#5E1717"
        android:textSize="75sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bienvenida"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/Bienvenida"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="60sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/correo_o_telefono"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#ACACAC"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/contrase"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/contrasenia"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#ACACAC"
                android:textSize="36sp" />

            <Button
                android:id="@+id/ini_se"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F53DA322"
                android:text="@string/inicio"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/pregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preg_cuent"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#061139"
                android:text="@string/registro"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>