<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="2"
        android:background="#FFFFFF"
        android:fontFamily="monospace"
        android:lineSpacingExtra="16sp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="#912828"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/elige"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="monospace"
        android:rotationX="29"
        android:text="@string/elegi"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#23CA14"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/agregar"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/agregar"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/compra"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/compra" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/menu"
        android:layout_width="404dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Titulo"
        app:layout_constraintVertical_bias="0.57">

        <LinearLayout
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fila1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagen_producto_1"
                    android:layout_width="96dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:src="@drawable/ham" />

                <CheckBox
                    android:id="@+id/producto_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hamburguesa"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fila2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagen_producto_2"
                    android:layout_width="40dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:src="@drawable/pizza" />

                <CheckBox
                    android:id="@+id/producto_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/pizza"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fila3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagen_producto_3"
                    android:layout_width="145dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:src="@drawable/hamypizza" />

                <CheckBox
                    android:id="@+id/producto_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hampizcom"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fila4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>